--- a/untitled/pom.xml
+++ b/untitled/pom.xml
@@ -23,6 +23,16 @@
             <artifactId>json</artifactId>
             <version>20220320</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>2.0.1</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
